--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "build": "babel src -d dist --plugins @babel/plugin-proposal-object-rest-spread",
-    "watch": "babel dist --watch --out-file index.js"
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "lint-staged": {
     "src/*.js": [
@@ -36,6 +36,8 @@
     "husky": "1.1.4",
     "lint-staged": "8.0.5",
     "prettier": "1.15.2",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
     "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {}
