--- a/package.json
+++ b/package.json
@@ -30,15 +30,25 @@
     "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/preset-env": "^7.1.6",
-    "babel-loader": "8.0.4",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "1.1.4",
+    "less-loader": "^4.1.0",
     "lint-staged": "8.0.5",
+    "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "whatwg-fetch": "^3.0.0"
+    "webpack-merge": "^4.1.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "whatwg-fetch": "^3.0.0"
+  }
 }
