--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production"
+    "dev": "webpack --mode development --config webpackConfig/webpack.develop.js",
+    "watch": "webpack-dev-server --mode development --config webpackConfig/webpack.develop.js",
+    "prod": "webpack --mode production --config webpackConfig/webpack.product.js"
   },
   "lint-staged": {
     "src/*.js": [
@@ -43,8 +44,10 @@
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
