--- a/.babelrc
+++ b/.babelrc
@@ -5,11 +5,8 @@
       {
         "targets": {
           "browsers": [
-            "Chrome >= 52",
-            "FireFox >= 44",
-            "Safari >= 7",
-            "Explorer 11",
-            "last 4 Edge versions"
+            "last 2 versions",
+            "Explorer 11"
           ]
         }
       }
