--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "1.1.4",
-    "less-loader": "^4.1.0",
     "lint-staged": "8.0.5",
     "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "prettier": "1.15.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.0",
