--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "FrontCamp program 2018",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/LenkouAndrei/FrontCamp.github.io/issues"
   },
-  "homepage": "https://github.com/LenkouAndrei/FrontCamp.github.io#readme"
+  "homepage": "https://github.com/LenkouAndrei/FrontCamp.github.io#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "winston": "^3.1.0"
+  }
 }
