--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -17,6 +17,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "mongoose": "^5.4.6"
+    "mongoose": "^5.4.6",
+    "nodemon": "^1.18.9"
   }
 }
